@@ -6,6 +6,9 @@ $labels['markreadfolder'] = 'Mark all as read';
 $labels['collapseall'] = 'Collapse all folders';
 $labels['expandall'] = 'Expand all folders';
 $labels['copyto'] = 'Copy to...';
+$labels['addcontactto'] = 'Add contact to To';
+$labels['addcontactcc'] = 'Add contact to Cc';
+$labels['addcontactbcc'] = 'Add contact to Bcc';
 
 $messages = array();
 
